# Foundation

./: .cursorignore  .gitignore  CODE_REVIEW_FIXES.md  COMPLETE_SOLUTION.md  DAGGER_IMPLEMENTATION.md  DISTILLATION_GRU_UPDATE.md  DISTILLATION_OBS_MISMATCH.md  DISTILLATION_OBS_MISMATCH_CHECKLIST.md  DISTILLATION_README.md  DISTILLATION_SUMMARY.md  DISTILLATION_UPDATES.md  IMPLEMENTATION_SUMMARY.md  LICENSE  LICENSE_HEADER.txt  QUICK_START.md  README.md  TRAJECTORY_TRACKING_TOOLS_README.md  TWO_STAGE_TRAINING_CONFIG_EXAMPLES.md  TWO_STAGE_TRAINING_README.md  VERIFICATION_CHECKLIST.md  teacher_dynamics.csv
auto_tune_results/: tune_all_bayesian_20251015_143918.json  tune_all_bayesian_20251015_151456.json  tune_roll_genetic_20251015_125549.json
foundation/algo/: batched_teacher.py  student_policy.py  teacher_ensemble.py
foundation/rsl_rl/: __init__.py  cli_args.py  distill.py  distill_runner.py  distillation.py  draw.py  draw_actions.py  play.py  play1.py  play2.py  play3.py  play4.py  play5.py  play6.py  play7.py  play_best_model.py  play_compare.py  play_student.py  play_teacher.py  train.py  train_distillation.py  train_student.py  train_teacher_multi.py  visualize_trajectory.py
foundation/tasks/: __init__.py
foundation/tasks/point_ctrl/: __init__.py  distillation_env.py  quad_point_ctrl_env_single_dense.py  quad_point_ctrl_env_single_experiment.py  quad_point_ctrl_env_single_px4.py  quad_point_ctrl_env_single_rate.py  quad_point_ctrl_env_single_simple.py  quad_point_ctrl_env_single_sparse.py
foundation/tasks/point_ctrl/agents/: rsl_rl_ppo_cfg.py
foundation/utils/: controller.py  controller1.py  death_replay.py  distillation_env.py  eval_terrain.py  map_generator.py  pcd2usd.py  player.py  px4_controller.py  px4_controller1.py  px4_controller2.py  px4controller.py  raster.py  raster0.py  rrg.py  simple_controller.py  simple_controller_old.py  test.py  train_terrain.py  walls_and_plane.py  wind_gen.py
onboard/sg2002_onboard/deploy/: CMakeLists.txt  build.sh  run.sh
onboard/sg2002_onboard/deploy/main/: CallbackRateStatistics.h  main.cpp
onboard/sg2002_onboard/deploy/main/logger/: log_viz.py  logger.cpp  logger.h  recorder.cpp  recorder.h
onboard/sg2002_onboard/deploy/main/observation/: observation_buffer.cpp  observation_buffer.h  tof_converter.h
onboard/sg2002_onboard/deploy/main/receiver/: control_client.py  joystick_utils.py  receiver.cpp  receiver.h
onboard/sg2002_onboard/deploy/main/test/: check_endian.c  serial_main.cpp  serial_main_std.cpp  tof_main.cpp
onboard/sg2002_onboard/deploy/src/crazyflie/: CMakeLists.txt
onboard/sg2002_onboard/deploy/src/crazyflie/include/: Commander.h  ConnectionImpl.h  CrazyflieLink.h  Logging.h  Packet.h
onboard/sg2002_onboard/deploy/src/crazyflie/src/: Commander.cpp  CrazyflieLink.cpp  Logging.cpp
onboard/sg2002_onboard/deploy/src/serial/: CMakeLists.txt
onboard/sg2002_onboard/deploy/src/serial/src/impl/: unix.cc
onboard/sg2002_onboard/deploy/src/serial/tests/proof_of_concepts/: python_serial_test.py
onboard/sg2002_onboard/deploy/src/tofsensem/: CMakeLists.txt
onboard/sg2002_onboard/deploy/src/tofsensem/examples/: main.cpp
onboard/sg2002_onboard/deploy/src/tofsensem/utils/: init_serial.cpp  init_serial.h  nlink_protocol.cpp  nlink_protocol.h
onboard/sg2002_onboard/deploy/src/tofsensem/utils/nlink_unpack/: CMakeLists.txt  nlink_iot_frame0.h  nlink_linktrack_anchorframe0.h  nlink_linktrack_aoa_nodeframe0.h  nlink_linktrack_nodeframe0.h  nlink_linktrack_nodeframe1.h  nlink_linktrack_nodeframe2.h  nlink_linktrack_nodeframe3.h  nlink_linktrack_nodeframe4.h  nlink_linktrack_nodeframe5.h  nlink_linktrack_nodeframe6.h  nlink_linktrack_tagframe0.h  nlink_tofsense_frame0.h  nlink_tofsensem_frame0.h  nlink_typedef.h  nlink_utils.h
onboard/sg2002_onboard/deploy/src/tofsensem/utils/protocol_extracter/: CMakeLists.txt  example.cpp  nprotocol_base.cpp  nprotocol_base.h  nprotocol_extracter.cpp  nprotocol_extracter.h
onboard/sg2002_onboard/deploy/src/tofsensem/wrapper/: tofImpl.cpp  tofImpl.h
onboard/sg2002_onboard/deploy/src/tpu/: CMakeLists.txt  tpu.cpp  tpu.h
rsl_rl/config/: dummy_config.yaml
rsl_rl/rsl_rl/algorithms/: distillation.py  ppo.py
rsl_rl/rsl_rl/modules/: __init__.py  actor_critic.py  actor_critic_attention.py  actor_critic_mlp.py  actor_critic_rnn.py  student_teacher_recurrent_custom.py
rsl_rl/rsl_rl/runners/: distillation_runner.py  on_policy_runner.py
rsl_rl/rsl_rl/storage/: rollout_storage.py
